--- a/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
+++ b/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
@@ -188,7 +188,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <button
-                                    routerLink="/store/shop/thankyou"
+                                    routerLink="/store/shop/checkout"
                                     class="btn btn-primary btn-lg py-3 btn-block"
                                 >
                                     {{ 'LAYOUT.DEFAULT_CART.FINISH' | translate }}
