--- a/projects/admin/src/lib/Components/header/elements/item-list/item-list.component.html
+++ b/projects/admin/src/lib/Components/header/elements/item-list/item-list.component.html
@@ -8,7 +8,7 @@
     <li class="btn-group nav-item">
         <a routerLinkActive="active-item" routerLink="/admin/" class="nav-link">
             <i class="nav-link-icon fa fa-rocket"></i>
-            {{ 'DASH.LIST.STAT' | translate }}
+            {{ 'DASH.FOOTER.HOME' | translate }}
         </a>
     </li>
     <li class="dropdown nav-item">
