--- a/projects/product/src/lib/Containers/all-products/all-products.component.html
+++ b/projects/product/src/lib/Containers/all-products/all-products.component.html
@@ -15,6 +15,10 @@
         </div>
     </div>
     <div class="col-md-8">
-        <img src="assets/images/products/add_products.png" alt="" class="img-fluid image-pos" />
+        <img
+            src="assets/images/products/add_products.png"
+            alt=""
+            class="img-fluid image-pos store-pos"
+        />
     </div>
 </div>
