--- a/projects/home/src/lib/Container/home/home.component.html
+++ b/projects/home/src/lib/Container/home/home.component.html
@@ -2,7 +2,10 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light nav-bar-home">
             <a class="navbar-brand" href="#">
-                <img src="assets/images/shoppable.png" alt="" class="img-fluid image-pos img-size"
+                <img
+                    src="assets/images/shoppable-Home.png"
+                    alt=""
+                    class="img-fluid image-pos img-size"
             /></a>
             <button
                 class="navbar-toggler"
@@ -18,48 +21,65 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"
+                            >Start <span class="sr-only">(current)</span></a
+                        >
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sell</a>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
-                            <button class="dropbtn dropdown-toggle">Dropdown</button>
+                            <button class="dropbtn dropdown-toggle">Manage</button>
                             <div class="dropdown-content">
-                                <a href="#">Link 1</a>
-                                <a href="#">Link 2</a>
-                                <a href="#">Link 3</a>
+                                <a href="#">Payments</a>
+                                <a href="#">Shipping</a>
+                                <a href="#">Capital</a>
                             </div>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#">Market</a>
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    Navbar text with an inline element
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active ul-nav-font">
+                            <a routerLink="/auth/register" class="nav-link get-link" href="#"
+                                >GET STARTED</a
+                            >
+                        </li>
+                        <li class="nav-item ul-nav-font">
+                            <a routerLink="/auth/login" class="nav-link" href="#">LOG IN</a>
+                        </li>
+                        <li class="nav-item ul-nav-font">
+                            <span class="icon fa fa-search search-span"></span>
+                        </li>
+                    </ul>
                 </span>
             </div>
         </nav>
         <div class="container">
             <div class="row align-items-start">
-                <div class="col-sm" style="background-color: white; padding: 100px 20px 100px 0;">
-                    <h2 style="font-weight: 800px;">
-                        <strong>Build exactly the eCommerce website you want</strong>
+                <div class="col-sm" style="padding: 100px 20px 100px 0;">
+                    <h2>
+                        <strong style="font-weight: 700; color: #8186d5;"
+                            >Build exactly the eCommerce website you want</strong
+                        >
                     </h2>
                     <p>
-                        WooCommerce is a customizable, open-source eCommerce platform built on
-                        WordPress. Get started quickly and make your way.
+                        <b>
+                            Shoppable is a commerce platform that allows anyone to create an online
+                            store and sell their products. Get started quickly and make your way.
+                        </b>
                     </p>
                     <br />
-                    <button class="btn btn-secondary">Press me !</button>
-                    or
-                    <button class="btn btn-secondary">Press me 2!</button>
+                    <button class="btn-log log">START A NEW STORE</button>
                 </div>
-                <div class="col-sm" style="background-color: white;">
+                <div class="col-sm">
                     <div class="row">
-                        <div class="col-sm" style="background-color: white;">
+                        <div class="col-sm">
                             <img
                                 src="assets/home/image01.jpg"
                                 alt=""
@@ -76,7 +96,7 @@
                                 class="img-fluid image-pos img-template"
                             />
                         </div>
-                        <div class="col-sm" style="background-color: white; padding-top: 30px;">
+                        <div class="col-sm" style="padding-top: 30px;">
                             <img
                                 src="assets/home/image04.jpg"
                                 alt=""
@@ -98,60 +118,68 @@
             </div>
         </div>
     </header>
+    <div class="curved">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <defs>
+                <linearGradient id="linear" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%" style="stop-color: rgb(91, 97, 167); stop-opacity: 1;" />
+                    <stop offset="100%" style="stop-color: rgb(132, 141, 206); stop-opacity: 1;" />
+                </linearGradient>
+            </defs>
+            <path
+                fill="url(#linear)"
+                fill-opacity="1"
+                d="M0,192L80,213.3C160,235,320,277,480,277.3C640,277,800,235,960,208C1120,181,1280,171,1360,165.3L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+            ></path>
+        </svg>
+    </div>
+
     <div class="body-mock">
         <div class="boxed-page">
-            <nav id="gtco-header-navbar" class="navbar navbar-expand-lg py-4">
-                <div class="container">
-                    <a class="navbar-brand d-flex align-items-center" href="/">
-                        <span class="lnr lnr-moon"></span>
-                    </a>
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-toggle="collapse"
-                        data-target="#navbar-nav-header"
-                        aria-controls="navbar-nav-header"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                    >
-                        <span class="lnr lnr-menu"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar-nav-header">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#home">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#who-we-are">Profile</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#blog">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#portfolio">Portfolio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#pricing">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+            <nav class="navbar navbar-expand-lg navbar-light nav-home">
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarText"
+                    aria-controls="navbarText"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="mr-auto navbar-nav">
+                        <li class="nav-item">
+                            <a
+                                routerLink="/home/stores"
+                                class="nav-link"
+                                routerLinkActive="active-link"
+                                href="#"
+                                >Stores</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                routerLink="/home/products"
+                                class="nav-link"
+                                routerLinkActive="active-link"
+                                href="#"
+                                >Products</a
+                            >
+                        </li>
+                    </ul>
+                    <span class="nav-item" style="margin-right: 20px;">
+                        Navbar text with an inline element
+                    </span>
                 </div>
             </nav>
-            <div
-                class="jumbotron d-flex align-items-center"
-                style="background-image: url(assets/home/hero-2.jpg);"
-            >
-                <div class="container text-center">
-                    <h1 class="display-2 mb-4">Hello, world!</h1>
-                    <p>
-                        Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.<br />Duis
-                        mollis, est non commodo luctus.
-                    </p>
+            <div class="jumbotron d-flex">
+                <div class="container">
+                    <router-outlet></router-outlet>
                 </div>
             </div>
+            <hr />
             <section id="gtco-who-we-are" class="bg-white">
                 <div class="container">
                     <div class="section-content">
