--- a/projects/home/src/lib/Container/home/home.component.scss
+++ b/projects/home/src/lib/Container/home/home.component.scss
@@ -3,6 +3,39 @@
 .nav-bar-home {
     border-bottom: 1px solid #dddbdb;
 }
+.nav-marg {
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.btn-log {
+    cursor: pointer;
+    border: 0;
+    border-radius: 4px;
+    font-weight: 600;
+    margin: 0 10px;
+    width: 200px;
+    padding: 10px 0;
+    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
+    transition: 0.4s;
+    color: #8186d5;
+    background-color: rgba(255, 255, 255, 1);
+    border: 1px solid #8186d5;
+}
+.btn-log:hover {
+    cursor: pointer;
+    border: 0;
+    border-radius: 4px;
+    font-weight: 600;
+    margin: 0 10px;
+    width: 200px;
+    padding: 10px 0;
+    box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
+    transition: 0.4s;
+    color: white;
+    background-color: #8186d5;
+    border: 1px solid #8186d5;
+}
+
 // header {
 //     height: 100vh;
 // }
@@ -12,6 +45,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     position: relative;
+    margin-top: -50px;
     font-family: 'Lato', sans-serif !important;
     font-weight: 300 !important;
     font-size: 1rem !important;
@@ -28,9 +62,9 @@
     background-attachment: fixed;
     opacity: 0.8;
     z-index: 1;
-    background: #f12711 !important;
-    background: -webkit-linear-gradient(to right, #f5af19, #f12711) !important;
-    background: linear-gradient(to right, #f5af19, #f12711) !important;
+    background: #8186d5 !important;
+    background: -webkit-linear-gradient(to right, #494ca2, #8186d5) !important;
+    background: linear-gradient(to right, #494ca2, #8186d5) !important;
 }
 .img-template {
     -webkit-box-shadow: 2px 2px 10px #aaa;
@@ -40,18 +74,63 @@
 }
 .img-size {
     width: 150px;
+    margin-left: 10vw;
+}
+.get-link {
+    color: #8186d5 !important;
+}
+.nav-item {
+    font-size: 120%;
+    font-weight: 300;
+}
+.ul-nav-font {
+    font-size: 115%;
+    font-weight: 400;
+}
+.icon {
+    margin-right: 10vw;
+    color: #494ca2;
 }
 .boxed-page {
     margin: 0 auto;
-    margin-top: 6rem;
+    //margin-top: 6rem;
 
     margin-bottom: 6rem;
     position: relative;
     z-index: 9;
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11), 0 5px 15px 0 rgba(0, 0, 0, 0.08);
-    border-radius: 0px;
+    border-radius: 0 !important;
+}
+.nav-home {
+    background-color: #e3e7f1;
+    color: #494ca2 !important;
+
+    margin: 0;
+    padding: 0;
+}
+.nav-item {
+    margin: 0;
+    padding: 0;
+}
+.nav-link {
+    padding: 15px 30px !important;
+    color: #494ca2 !important;
+
+    transition: 0.4s;
+    margin: 0 !important;
+}
+.nav-link:hover {
+    transition: 0.4s;
+    background-color: white;
 }
 
+.active-link {
+    background-color: white;
+}
+.navbar-nav {
+    margin: 0;
+    padding: 0;
+}
 @media (min-width: 1200px) {
     .boxed-page {
         width: 1024px;
@@ -301,8 +380,7 @@ a {
     background-position: 50% 50%;
     position: relative;
     border-radius: 0;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+
     margin-bottom: 0;
     overflow: hidden;
     min-height: 500px;
@@ -623,16 +701,16 @@ footer {
     }
 }
 .dropbtn {
+    font-weight: 300;
     background-color: #f8f9fa;
     padding-right: 0.5rem;
     padding-left: 0.5rem;
-    padding: 0.5rem 1rem;
-    color: black;
+    padding: 15px 30px !important;
+    color: #494ca2;
 
     //font-size: 16px;
     border: none;
 }
-
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
@@ -665,4 +743,17 @@ footer {
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
+}
+.curved {
+    margin-top: -160px;
+    color: #fff;
+    text-align: center;
+}
+.curved svg {
+    display: block;
+    //color: linear-gradient(to right, #494ca2, #8186d5) !important;
+}
+.icon {
+    padding-top: 10px;
+    margin-left: 10px;
 }
