--- a/projects/home/src/lib/Components/home-search/home-search.component.html
+++ b/projects/home/src/lib/Components/home-search/home-search.component.html
@@ -1,10 +1,12 @@
-<form action="" class="site-block-top-search">
-    <input
-        type="text"
-        class="form-control border-0"
-        placeholder="Search"
-        (input)="searchFilter($event.target.value)"
-    />
+<div class="center-el">
+    <form action="" class="site-block-top-search">
+        <input
+            type="text"
+            class="form-control border-0"
+            placeholder="Search"
+            (input)="searchFilter($event.target.value)"
+        />
 
-    <span class="icon fa fa-search search-span"></span>
-</form>
+        <span class="icon fa fa-search search-span"></span>
+    </form>
+</div>
