--- a/projects/home/src/lib/Container/home-stores/home-stores.component.scss
+++ b/projects/home/src/lib/Container/home-stores/home-stores.component.scss
@@ -6,23 +6,24 @@ body {
 }
 img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: auto;
     display: block; /* remove extra space below image */
 }
 .text-Majus {
-    margin: -7px auto 0 auto !important;
+    margin: -19px auto 0 auto !important;
     font-size: 120%;
 
     text-transform: uppercase;
 }
 
 .wrapper {
-    width: 280px;
-    height: 280px;
+    width: 250px;
+    height: 250px;
     background: white;
     position: relative;
     overflow: hidden;
     border-radius: 10px 10px 10px 10px;
+
     box-shadow: 0;
     transform: scale(0.95);
     transition: box-shadow 0.5s, transform 0.5s;
@@ -35,13 +36,14 @@ img {
         width: 100%;
         height: 100%;
         .top {
-            height: 80%;
+            height: 85%;
             width: 100%;
             background-size: contain;
         }
         .bottom {
             width: 200%;
-            height: 20%;
+            height: 15%;
+
             transition: transform 0.5s;
             &.clicked {
                 transform: translateX(-50%);
@@ -73,13 +75,13 @@ img {
                     transition: background 0.5s;
                     border-left: solid thin rgba(0, 0, 0, 0.1);
                     i {
-                        font-size: 30px;
-                        padding: 5px 20px !important;
-                        color: #8186d5;
+                        font-size: 20px;
+                        padding: 0 22px !important;
+                        color: #3b3b3b;
                         transition: transform 0.5s;
                     }
                     &:hover {
-                        background: #c6cbef;
+                        background: #818080;
                     }
                     &:hover i {
                         transform: translateY(-1px);
@@ -89,7 +91,7 @@ img {
             }
             .right {
                 width: 50%;
-                background: #c6cbef;
+                background: #3b3b3b;
                 color: white;
                 float: right;
                 height: 200%;
@@ -117,10 +119,10 @@ img {
                     clear: both;
                     border-right: solid thin rgba(255, 255, 255, 0.3);
                     height: 50%;
-                    background: #8186d5;
+                    background: #3b3b3b;
                     transition: transform 0.5s, background 0.5s;
                     &:hover {
-                        background: #8186d5;
+                        background: #3b3b3b;
                     }
                     &:hover i {
                         transform: translateY(5px);
@@ -144,9 +146,9 @@ img {
 
     .inside {
         z-index: 9;
-        background: #8186d5;
-        width: 140px;
-        height: 140px;
+        background: #3b3b3b;
+        width: 120px;
+        height: 120px;
         position: absolute;
         top: -70px;
         right: -70px;
@@ -155,8 +157,9 @@ img {
         overflow: hidden;
         .icon {
             position: absolute;
-            right: 85px;
-            top: 85px;
+            right: 75px;
+            top: 75px;
+
             color: white;
             opacity: 1;
         }
@@ -165,7 +168,7 @@ img {
             right: 0;
             top: 0;
             border-radius: 0;
-            height: 80%;
+            height: 85%;
             .icon {
                 opacity: 0;
                 right: 15px;
