--- a/projects/home/src/lib/Container/home/home.component.html
+++ b/projects/home/src/lib/Container/home/home.component.html
@@ -491,7 +491,9 @@
                                 need to start, run, and grow
                                 <br />your business.
                             </p>
-                            <button class="btn-logg log">Get Started</button>
+                            <button routerLink="/auth/register" class="btn-logg log">
+                                Get Started
+                            </button>
                         </div>
                     </div>
                 </div>
