--- a/projects/home/src/lib/Container/home-stores/home-stores.component.html
+++ b/projects/home/src/lib/Container/home-stores/home-stores.component.html
@@ -3,22 +3,20 @@
 <lib-home-search></lib-home-search>
 
 <div class="d-flex flex-wrap bd-highlight mb-3" style="margin-left: 3vw;">
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
+    <div class="p-2 bd-highlight" *ngFor="let store of allStores">
+        <div class="wrapper" (click)="navigateToShop(store)">
             <div class="container">
                 <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593911165054?alt=media&token=0189f0a7-54cc-47bd-8b31-99c4e6c44bcb"
-                    />
+                    <img src="{{ store.storeImg }}" />
                 </div>
 
                 <div class="bottom">
                     <div class="left">
                         <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
+                            <h1 class="text-Majus">{{ store.storeId }}</h1>
                         </div>
                         <div class="buy">
-                            <a (click)="navigateToShop()"
+                            <a
                                 ><i class="material-icons"
                                     ><svg
                                         width="1em"
@@ -42,324 +40,13 @@
                             ></a>
                         </div>
                     </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
                 </div>
             </div>
             <div class="inside">
                 <div class="icon"><i class="material-icons">info_outline</i></div>
                 <div class="contents">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
-            <div class="container">
-                <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593912690623?alt=media&token=24d62ed3-7ad7-4e0b-a6b9-27f7953b34e9"
-                    />
-                </div>
-
-                <div class="bottom">
-                    <div class="left">
-                        <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
-                        </div>
-                        <div class="buy">
-                            <i class="material-icons"
-                                ><svg
-                                    width="1em"
-                                    height="1em"
-                                    viewBox="0 0 16 16"
-                                    class="bi bi-basket2-fill"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M11.314 1.036a.5.5 0 0 1 .65.278l2 5a.5.5 0 1 1-.928.372l-2-5a.5.5 0 0 1 .278-.65zm-6.628 0a.5.5 0 0 0-.65.278l-2 5a.5.5 0 1 0 .928.372l2-5a.5.5 0 0 0-.278-.65z"
-                                    />
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M1.5 7a.5.5 0 0 0-.489.605l1.5 7A.5.5 0 0 0 3 15h10a.5.5 0 0 0 .489-.395l1.5-7A.5.5 0 0 0 14.5 7h-13zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
-                                    />
-                                    <path
-                                        d="M0 6.5A.5.5 0 0 1 .5 6h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1z"
-                                    /></svg
-                            ></i>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="inside">
-                <div class="icon"><i class="material-icons">info_outline</i></div>
-                <div class="contents">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
-            <div class="container">
-                <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593989171048?alt=media&token=6ce38b99-0c42-431d-bca3-6bb023e3f623"
-                    />
-                </div>
-
-                <div class="bottom">
-                    <div class="left">
-                        <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
-                        </div>
-                        <div class="buy">
-                            <i class="material-icons"
-                                ><svg
-                                    width="1em"
-                                    height="1em"
-                                    viewBox="0 0 16 16"
-                                    class="bi bi-basket2-fill"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M11.314 1.036a.5.5 0 0 1 .65.278l2 5a.5.5 0 1 1-.928.372l-2-5a.5.5 0 0 1 .278-.65zm-6.628 0a.5.5 0 0 0-.65.278l-2 5a.5.5 0 1 0 .928.372l2-5a.5.5 0 0 0-.278-.65z"
-                                    />
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M1.5 7a.5.5 0 0 0-.489.605l1.5 7A.5.5 0 0 0 3 15h10a.5.5 0 0 0 .489-.395l1.5-7A.5.5 0 0 0 14.5 7h-13zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
-                                    />
-                                    <path
-                                        d="M0 6.5A.5.5 0 0 1 .5 6h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1z"
-                                    /></svg
-                            ></i>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="inside">
-                <div class="icon"><i class="material-icons">info_outline</i></div>
-                <div class="contents">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
-            <div class="container">
-                <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593989149972?alt=media&token=d548333f-06fe-43d9-a5ae-4b92b07dc2f5"
-                    />
-                </div>
-
-                <div class="bottom">
-                    <div class="left">
-                        <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
-                        </div>
-                        <div class="buy">
-                            <i class="material-icons"
-                                ><svg
-                                    width="1em"
-                                    height="1em"
-                                    viewBox="0 0 16 16"
-                                    class="bi bi-basket2-fill"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M11.314 1.036a.5.5 0 0 1 .65.278l2 5a.5.5 0 1 1-.928.372l-2-5a.5.5 0 0 1 .278-.65zm-6.628 0a.5.5 0 0 0-.65.278l-2 5a.5.5 0 1 0 .928.372l2-5a.5.5 0 0 0-.278-.65z"
-                                    />
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M1.5 7a.5.5 0 0 0-.489.605l1.5 7A.5.5 0 0 0 3 15h10a.5.5 0 0 0 .489-.395l1.5-7A.5.5 0 0 0 14.5 7h-13zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
-                                    />
-                                    <path
-                                        d="M0 6.5A.5.5 0 0 1 .5 6h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1z"
-                                    /></svg
-                            ></i>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="inside">
-                <div class="icon"><i class="material-icons">info_outline</i></div>
-                <div class="contents">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
-            <div class="container">
-                <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593989133248?alt=media&token=e569d660-6c64-46df-90ef-9d04d2122718"
-                    />
-                </div>
-
-                <div class="bottom">
-                    <div class="left">
-                        <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
-                        </div>
-                        <div class="buy">
-                            <i class="material-icons"
-                                ><svg
-                                    width="1em"
-                                    height="1em"
-                                    viewBox="0 0 16 16"
-                                    class="bi bi-basket2-fill"
-                                    fill="currentColor"
-                                    xmlns="http://www.w3.org/2000/svg"
-                                >
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M11.314 1.036a.5.5 0 0 1 .65.278l2 5a.5.5 0 1 1-.928.372l-2-5a.5.5 0 0 1 .278-.65zm-6.628 0a.5.5 0 0 0-.65.278l-2 5a.5.5 0 1 0 .928.372l2-5a.5.5 0 0 0-.278-.65z"
-                                    />
-                                    <path
-                                        fill-rule="evenodd"
-                                        d="M1.5 7a.5.5 0 0 0-.489.605l1.5 7A.5.5 0 0 0 3 15h10a.5.5 0 0 0 .489-.395l1.5-7A.5.5 0 0 0 14.5 7h-13zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
-                                    />
-                                    <path
-                                        d="M0 6.5A.5.5 0 0 1 .5 6h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1z"
-                                    /></svg
-                            ></i>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="inside">
-                <div class="icon"><i class="material-icons">info_outline</i></div>
-                <div class="contents">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="p-2 bd-highlight">
-        <div class="wrapper">
-            <div class="container">
-                <div class="top">
-                    <img
-                        src="https://firebasestorage.googleapis.com/v0/b/kila-2352b.appspot.com/o/RoomsImages%2F1593989121690?alt=media&token=6db58132-e772-4e9e-9028-471ea950efe3"
-                    />
-                </div>
-
-                <div class="bottom">
-                    <div class="left">
-                        <div class="details">
-                            <h1 class="text-Majus">Shoppers</h1>
-                        </div>
-                        <div class="buy">
-                            <a (click)="navigateToShop()"
-                                ><i class="material-icons"
-                                    ><svg
-                                        width="1em"
-                                        height="1em"
-                                        viewBox="0 0 16 16"
-                                        class="bi bi-basket2-fill"
-                                        fill="currentColor"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                    >
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M11.314 1.036a.5.5 0 0 1 .65.278l2 5a.5.5 0 1 1-.928.372l-2-5a.5.5 0 0 1 .278-.65zm-6.628 0a.5.5 0 0 0-.65.278l-2 5a.5.5 0 1 0 .928.372l2-5a.5.5 0 0 0-.278-.65z"
-                                        />
-                                        <path
-                                            fill-rule="evenodd"
-                                            d="M1.5 7a.5.5 0 0 0-.489.605l1.5 7A.5.5 0 0 0 3 15h10a.5.5 0 0 0 .489-.395l1.5-7A.5.5 0 0 0 14.5 7h-13zM4 10a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm3 0a1 1 0 0 1 2 0v2a1 1 0 1 1-2 0v-2zm4-1a1 1 0 0 0-1 1v2a1 1 0 1 0 2 0v-2a1 1 0 0 0-1-1z"
-                                        />
-                                        <path
-                                            d="M0 6.5A.5.5 0 0 1 .5 6h15a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1z"
-                                        /></svg></i
-                            ></a>
-                        </div>
-                    </div>
-                    <div class="right">
-                        <div class="done"><i class="material-icons">done</i></div>
-                        <div class="details">
-                            <h1>Chair</h1>
-                            <p>Added to your cart</p>
-                        </div>
-                        <div class="remove"><i class="material-icons">clear</i></div>
-                    </div>
-                </div>
-            </div>
-            <div class="inside">
-                <div class="icon"><i class="material-icons">info_outline</i></div>
-                <div class="contents">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quaerat
-                        earum sed dignissimos consectetur distinctio deleniti, facere placeat
-                        suscipit eum odio odit fugiat necessitatibus sit qui quos sunt sequi sint?
+                        {{ store.description }}
                     </p>
                 </div>
             </div>
