--- a/projects/home/src/lib/Container/home-stores/home-stores.component.scss
+++ b/projects/home/src/lib/Container/home-stores/home-stores.component.scss
@@ -33,6 +33,8 @@ img {
     }
 
     .container {
+        padding-left: 0;
+        padding-right: 0;
         width: 100%;
         height: 100%;
         .top {
