--- a/projects/layout/src/lib/Components/header/default/default-header.component.html
+++ b/projects/layout/src/lib/Components/header/default/default-header.component.html
@@ -59,7 +59,7 @@
                                 ></a>
                             </li>
                             <li>
-                                <a routerLink="/store/shop/cart" class="site-cart">
+                                <a (click)="goToCart()" class="site-cart">
                                     <span class="icon"
                                         ><svg
                                             class="bi bi-cart3"
