--- a/projects/layout/src/lib/Container/order-sucess/default/default-order/default-order.component.html
+++ b/projects/layout/src/lib/Container/order-sucess/default/default-order/default-order.component.html
@@ -32,7 +32,7 @@
                 <h2 class="display-3 text-black">{{ 'LAYOUT.DEFAULT_ORDER.THANK' | translate }}</h2>
                 <p class="lead mb-5 wasSucc">{{ 'LAYOUT.DEFAULT_ORDER.ORDER' | translate }}</p>
                 <p>
-                    <a routerLink="/store/shop" class="btn btn-sm btn-primary">{{
+                    <a routerLink="{{ linkUrl }}" class="btn btn-sm btn-primary">{{
                         'LAYOUT.DEFAULT_ORDER.BACK' | translate
                     }}</a>
                 </p>
