--- a/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
+++ b/projects/layout/src/lib/Container/cart/default/default-cart/default-cart.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a routerLink="/store/shop"> {{ 'LAYOUT.DEFAULT_CART.SHOP' | translate }}</a>
+                <a routerLink="{{ linkUrl }}"> {{ 'LAYOUT.DEFAULT_CART.SHOP' | translate }}</a>
                 <span class="mx-2 mb-0">/</span>
                 <strong class="text-black">{{ 'LAYOUT.DEFAULT_CART.CART' | translate }}</strong>
             </div>
@@ -104,16 +104,13 @@
             <div class="col-md-6">
                 <div class="row mb-5">
                     <div class="col-md-6 mb-3 mb-md-0">
-                        <button
-                            routerLink="/store/shop/cart"
-                            class="btn btn-primary btn-sm btn-block"
-                        >
+                        <button class="btn btn-primary btn-sm btn-block">
                             {{ 'LAYOUT.DEFAULT_CART.UPDATE' | translate }}
                         </button>
                     </div>
                     <div class="col-md-6">
                         <button
-                            routerLink="/store/shop"
+                            routerLink="{{ linkUrl }}"
                             class="btn btn-outline-primary btn-sm btn-block"
                         >
                             {{ 'LAYOUT.DEFAULT_CART.CONTINUE' | translate }}
@@ -188,7 +185,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <button
-                                    routerLink="/store/shop/checkout"
+                                    (click)="goToCart()"
                                     class="btn btn-primary btn-lg py-3 btn-block"
                                 >
                                     {{ 'LAYOUT.DEFAULT_CART.FINISH' | translate }}
