--- a/projects/webuilder/src/lib/components/webuilder-sidebar/webuilder-sidebar.component.html
+++ b/projects/webuilder/src/lib/components/webuilder-sidebar/webuilder-sidebar.component.html
@@ -5,26 +5,7 @@
                 <img src="assets/images/sh-logo-black.png" class="logo-sidebar" />
                 <a class="closebtn" (click)="closeNav()">×</a>
                 <div class="panel-container">
-                    <div class="panel-cont-text">
-                        <h1>Add a Logo</h1>
-                        <p>
-                            Make your site feel like yours. If you have a logo ready, add it now.
-                        </p>
-                        <form class="example-form">
-                            <mat-form-field class="example-full-width">
-                                <mat-label>SITE TITLE</mat-label>
-                                <!-- [formControl]="emailFormControl" -->
-                                <input matInput />
-                                <!-- <mat-hint>Errors appear instantly!</mat-hint>
-                              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-                                Please enter a valid email address
-                              </mat-error>
-                              <mat-error *ngIf="emailFormControl.hasError('required')">
-                                Email is <strong>required</strong>
-                              </mat-error> -->
-                            </mat-form-field>
-                        </form>
-                    </div>
+                    <router-outlet></router-outlet>
                 </div>
                 <nav class="navButtons">
                     <button class="NavButton-Button" type="button">
