--- a/projects/layout/src/lib/Container/first-template-home/first-template-home.component.scss
+++ b/projects/layout/src/lib/Container/first-template-home/first-template-home.component.scss
@@ -116,6 +116,7 @@ ul li a:hover .count {
 .img_header_up {
     margin-top: -65vh;
 }
-.mr-auto {
-    margin-right: 23vw !important;
+
+.mr-auto-nav {
+    margin-right: 33vw !important;
 }
