--- a/projects/webuilder/src/lib/containers/builder-base/builder-base.component.html
+++ b/projects/webuilder/src/lib/containers/builder-base/builder-base.component.html
@@ -2,7 +2,7 @@
     <div class="bd-highlight">
         <lib-webuilder-sidebar (barClose)="barClose($event)"></lib-webuilder-sidebar>
     </div>
-    <div class="bd-highlight site-size" id="SiteWarp">
+    <div class="bd-highlight site-size" id="SiteWarp" class="web-fixer">
         <lib-first-template-home></lib-first-template-home>
     </div>
 </div>
