--- a/projects/layout/src/lib/Container/first-template-home/theme/_btn.scss
+++ b/projects/layout/src/lib/Container/first-template-home/theme/_btn.scss
@@ -10,6 +10,43 @@
     background: $primary-color;
     color: #fff;
     transition: all 0.4s ease;
+
+    &-unFill {
+        font-size: 14px;
+        padding: 10px 20px;
+        background: transparent !important;
+        color: #000000 !important;
+
+        @media (min-width: 800px) {
+            padding: 12px 35px;
+            font-size: 15px;
+        }
+    }
+    &-dashed {
+        border-style: dashed !important;
+
+        background: transparent !important;
+        color: #000000 !important;
+
+        font-size: 14px;
+        padding: 10px 20px;
+
+        @media (min-width: 800px) {
+            padding: 12px 35px;
+            font-size: 15px;
+        }
+    }
+    &-rounded {
+        border-radius: 5px 5px 5px 5px !important;
+
+        font-size: 14px;
+        padding: 10px 20px;
+
+        @media (min-width: 800px) {
+            padding: 12px 35px;
+            font-size: 15px;
+        }
+    }
     &-square {
         border-radius: 0px;
         font-size: 14px;
