--- a/projects/layout/src/lib/Container/first-template-home/theme/_header.scss
+++ b/projects/layout/src/lib/Container/first-template-home/theme/_header.scss
@@ -4,7 +4,7 @@
     width: 100%;
     z-index: 9999;
     transition: background 0.4s, all 0.3s linear;
-    box-shadow: 0px 10px 27px 3px rgba(221, 221, 221, 0.3);
+    // box-shadow: 0px 10px 27px 3px rgba(221, 221, 221, 0.3);
 
     .navbar {
         background: transparent;
