--- a/projects/webuilder/src/lib/components/logo-builder/logo-builder.component.scss
+++ b/projects/webuilder/src/lib/components/logo-builder/logo-builder.component.scss
@@ -7,12 +7,14 @@
 h3 {
     font-weight: 500;
 }
-.panel-cont-text p {
-    color: #767676;
-    font-size: 14px;
+p {
+    color: #767676 !important;
+    font-size: 16px;
     letter-spacing: initial;
     line-height: 22px;
+    font-weight: 400;
 }
+
 .example-form {
     margin-top: 33px;
 }
@@ -28,4 +30,83 @@ h3 {
     padding-left: 10px;
     padding-right: 10px;
     border: 1px solid #25262a;
+}
+.panel-container {
+    margin-top: 15px;
+    color: #3e3e3e;
+}
+.navButtons {
+}
+.NavButton-Button {
+    box-sizing: border-box;
+    max-width: 194px;
+    bottom: 0;
+    justify-content: flex-end;
+    left: auto;
+    right: 60px;
+    align-items: center;
+    background: transparent;
+    border: 1px solid #e1e1e1;
+    bottom: 33px;
+    box-sizing: border-box;
+    color: #313131;
+    cursor: pointer;
+    display: flex;
+    font-weight: 500;
+    height: 55px;
+    min-width: 55px;
+
+    padding: 12px 22px;
+    position: absolute;
+    text-transform: uppercase;
+    white-space: nowrap;
+    z-index: 999999;
+}
+
+.NavButton-Button-back {
+    box-sizing: border-box;
+    max-width: 194px;
+    bottom: 0;
+    justify-content: flex-end;
+    left: auto;
+
+    align-items: center;
+    background: transparent;
+    border: 1px solid #e1e1e1;
+    bottom: 33px;
+    box-sizing: border-box;
+    color: #313131;
+    cursor: pointer;
+    display: flex;
+    font-weight: 500;
+    height: 55px;
+    min-width: 55px;
+
+    padding: 12px 22px;
+    position: absolute;
+    text-transform: uppercase;
+    white-space: nowrap;
+    z-index: 999999;
+}
+.NavButton-ButtonText {
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    line-height: 14px;
+    opacity: 1;
+
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+.NavButton-Button:hover {
+    background-color: #e2e2e2;
+}
+.NavButton-Button:disabled {
+    color: #b4b4b4 !important;
+}
+
+.NavButton-Arrow {
+    height: 14px;
+    width: 14px;
 }
