--- a/projects/webuilder/src/lib/components/button-builder/button-builder.component.html
+++ b/projects/webuilder/src/lib/components/button-builder/button-builder.component.html
@@ -24,7 +24,7 @@
         </mat-form-field>
 
         <nav class="navButtons">
-            <button class="NavButton-Button" type="button" routerLink="/website/config/theme">
+            <button class="NavButton-Button" type="button" routerLink="/website/config/text">
                 <span class="NavButton-ButtonText">Next</span>
                 <svg
                     width="1.7em"
