--- a/projects/webuilder/src/lib/components/logo-builder/logo-builder.component.scss
+++ b/projects/webuilder/src/lib/components/logo-builder/logo-builder.component.scss
@@ -35,6 +35,9 @@ p {
     margin-top: 15px;
     color: #3e3e3e;
 }
+button {
+    background-color: transparent !important;
+}
 .navButtons {
 }
 .NavButton-Button {
