--- a/projects/layout/src/lib/Container/first-template-home/first-template-home.component.html
+++ b/projects/layout/src/lib/Container/first-template-home/first-template-home.component.html
@@ -533,7 +533,7 @@
                 >
                     <h3 class="subscribe__title">{{ web_text_FOH3 }}</h3>
                     <p>
-                        Bearing Void gathering light light his eavening unto dont afraid
+                        {{ web_text_FOP }}
                     </p>
                     <div id="mc_embed_signup">
                         <form
@@ -596,13 +596,10 @@
                                 Our Mission
                             </h4>
                             <p [ngStyle]="{ color: main_color }">
-                                So seed seed green that winged cattle in. Gathering thing made fly
-                                you're no divided deep moved us lan Gathering thing us land years
-                                living.
+                                {{ web_text_footer_P1 }}
                             </p>
                             <p [ngStyle]="{ color: main_color }">
-                                So seed seed green that winged cattle in. Gathering thing made fly
-                                you're no divided deep moved
+                                {{ web_text_footer_P2 }}
                             </p>
                         </div>
                     </div>
@@ -642,7 +639,7 @@
                                     <span class="fa fa-location-arrow"></span>
                                     {{ web_text_footer_HO }}
                                 </p>
-                                <p [ngStyle]="{ color: main_color }">123, Main Street, Your City</p>
+                                <p [ngStyle]="{ color: main_color }">{{ web_text_footer_AD }}</p>
 
                                 <p class="sm-head" [ngStyle]="{ color: main_color }">
                                     <span class="fa fa-phone"></span>
@@ -650,7 +647,6 @@
                                 </p>
                                 <p [ngStyle]="{ color: main_color }">
                                     {{ web_text_footer_FPN }}<br />
-                                    {{ web_text_footer_SPN }}
                                 </p>
 
                                 <p class="sm-head" [ngStyle]="{ color: main_color }">
@@ -659,7 +655,6 @@
                                 </p>
                                 <p [ngStyle]="{ color: main_color }">
                                     {{ web_text_footer_EMAIL_F }} <br />
-                                    {{ web_text_footer_EMAIL_S }}
                                 </p>
                             </div>
                         </div>
